# shellerator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  shellerator.py
data/: shells.json
payloads/: awk.json  bash.json  groovy.json  java.json  lua.json  meterpreter.json  ncat.json  netcat.json  nodejs.json  openssl.json  perl.json  php.json  powershell.json  python.json  ruby.json  socat.json  tclsh.json  telnet.json  war.json
